# edu_pl

./: README.md  docker-compose.yaml  pyproject.toml  run.py
src/: main.py
src/db/: database.py  models.py
src/db/init/: 1_create_databases.sql
